feat: status db 및 api 변경
