# middleware/validation/status.js
@@ -1,5 +1,10 @@
 const { body } = require('express-validator');
 
-const putStatusRules = [body('status').exists(), body('comment').exists()];
+const putStatusRules = [
+  body('status').exists(),
+  body('comment').exists(),
+  body('position').exists(),
+  body('phoneNumber').exists(),
+];
 
 module.exports.putStatusRules = putStatusRules;
